<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rahul.guessthecolour.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome"
        android:id="@+id/welcomeTextBox"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:onClick="game"
        android:id="@+id/playButton"
        android:layout_below="@+id/welcomeTextBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highScore"
        android:id="@+id/scoreButton"
        android:layout_below="@+id/playButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="HighScore" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/highscoreText"
        android:layout_toRightOf="@+id/scoreButton"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:layout_alignBottom="@id/scoreButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:id="@+id/helpButton"
        android:onClick="help"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/scoreButton"
        android:layout_marginTop="10dp"        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/options"
        android:onClick="options"
        android:layout_below="@+id/helpButton"
        android:id="@+id/options" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:onClick="exit"
        android:id="@+id/exitButton"
        android:layout_below="@+id/options"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />



</RelativeLayout>
