<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rahul.guessthecolour.GameOver">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/game_over"
        android:id="@+id/gameOverTextBox"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textColor="#e81b22"
        android:textSize="40sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/score"
        android:id="@+id/scoreTextBox"
        android:layout_below="@+id/gameOverTextBox"
        android:layout_alignLeft="@+id/gameOverTextBox"
        android:layout_alignStart="@+id/gameOverTextBox"
        android:layout_marginTop="30dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/highest"
        android:id="@+id/highestTextBox"
        android:layout_below="@+id/scoreTextBox"
        android:layout_alignLeft="@+id/scoreTextBox"
        android:layout_alignStart="@+id/scoreTextBox"
        android:layout_marginTop="30dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/highestTextBox"
        android:text="PLAY AGAIN"
        android:id="@+id/playAgain"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:onClick="playAgain"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_main_menu"
        android:id="@+id/menuButton"
        android:layout_below="@+id/highestTextBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:onClick="backToMain" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/CurrentScore"
        android:layout_toRightOf="@+id/scoreTextBox"
        android:layout_alignBottom="@id/scoreTextBox"
        android:layout_marginLeft="35dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0"
        android:id="@+id/HighestScore"
        android:layout_toRightOf="@+id/highestTextBox"
        android:layout_alignBottom="@id/highestTextBox"
        android:layout_marginLeft="15dp"/>
</RelativeLayout>
